@@ -1,3 +1,7 @@
+2006-11-21 Tim
+ PATCH: [ 1398013 ] Add availability of binary viewing/merging to FAQ
+  Manual: Faq.xml
+
 2006-11-20 Tim
  PATCH: [ 1599401 ] Manual: Use bold text for questions (FAQ)
   Manual/css: all.css help.css print.css
